画像サイズ大きくしたよ！！

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <p>甘いものを食べると、脳のなかで｢幸せホルモン｣といわれる</p>
         <p>セロトニンが増えていると考えられています。</p>
     </header>
-    <img src="images/shop.jpg"> 
+    <img src="images/shop.jpg" alt="ショップ"> 
     <div class="cakebox">
         <div class="cakes">
             <h2>ショートケーキ</h2>
